style.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");

@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");

body {
  height: 200rem;
}

* {
  font-family: "JetBrains Mono", sans-serif;
  font-weight: 600;
  font-style: normal;
}

::-webkit-scrollbar {
  width: 2px;
}

::-webkit-scrollbar-thumb {
  background-color: #16161a;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #6c757d;
}

::-webkit-scrollbar-track {
  background-color: #8c949b;
}

/* Navbar */
#nav {
  background-color: #16161aed;
}
ul li a {
  color: #6c757d !important;
  font-size: 1.2rem !important;
}

ul li a:hover {
  color: #94a1b2 !important;
}

#hero {
  height: 100vh;
  width: 100%;
  background-color: #16161a;
}

/* sidebar medsos */
#sidebar-medsos {
  width: 4rem;
  background-color: #16161a;
}

.medsos-items {
  box-sizing: border-box;
  font-size: 1.8em;
}
.medsos-items:hover {
  color: #94a1b2;
  transition: 0.1s ease-in;
  scale: 1.2;
  -webkit-transition: 0.1s ease-in;
  -moz-transition: 0.1s ease-in;
  -ms-transition: 0.1s ease-in;
  -o-transition: 0.1s ease-in;
}

.btn-outline-secondary:hover {
  background-color: #16161a;
  color: #8c949b;
}

.light:hover {
  border: 1px solid aqua !important;
}

.light:hover .light-logo {
  color: orange !important;
}
.light:hover .music {
  color: teal !important;
}
@media (max-width: 435px) {
  #sidebar-medsos,
  #sidebar-mode {
    align-items: end !important;
  }
  #sidebar-medsos {
    padding-bottom: 0.5rem;
  }
  #sidebar-mode {
    padding-bottom: 1rem !important;
  }
  #name {
    position: relative;
    z-index: 2;
  }
}

